@@ -1405,12 +1405,9 @@ void mi::Tick()
 
 static bool DoWorkChannel(float *pout, mi *pmi, int c, CChannel *chn)
 {
-  bool istracked=(chn->pTrack!=0);
   CTrack *trk=chn->pTrack?chn->pTrack:&pmi->Tracks[MAX_TRACKS+1];
 //  bool istracked=false;
 //  CTrack *trk=&pmi->Tracks[MAX_TRACKS+1];
-
-  int i;
 
   float CurCutoff=pmi->inrCutoff.m_fAccum;
   float CurResonance=pmi->inrResonance.m_fAccum;
@@ -1470,13 +1467,11 @@ static bool DoWorkChannel(float *pout, mi *pmi, int c, CChannel *chn)
   
 //  float vel=(chn==pmi->Channels)?chn->Velocity*1.41f:0; // XXXKF
   float vel=chn->Velocity*1.41f;
-  int nTime=chn->AmpEnv.GetTimeLeft();
 
   float *theAtanTable=atanTables[pmi->aval.cliptable];
 
   // bool bKey=GetKeyState(VK_SHIFT)<0; //XXXKF
   CADSREnvelope *pEnv=&chn->AmpEnv;
-  int *pTime=&pEnv->m_nTime;
   {
     int nTab=sizeof(tablesA)/4;
     int nTab2=sizeof(tablesC)/4;
@@ -1498,7 +1493,6 @@ static bool DoWorkChannel(float *pout, mi *pmi, int c, CChannel *chn)
     // int nPWM1Depth=int(60000.0*32000*pmi->gvalAct.vPWMRangeA/240/* /(nPWM1Period*240)*/);
     // int nPWM2Depth=int(60000.0*32000*pmi->gvalAct.vPWMRangeB/240/* /(nPWM2Period*240)*/);
     int nPWM1,nPWM2;
-    int &nPhase=chn->Phase1, &nPhase2=chn->Phase2;
     float fOscMix=pmi->gvalAct.vOscMix/240.0f;
     float fSubOsc=pmi->gvalAct.vSubOscVol/240.0f;
 
